# gazelock

./: .gitattributes  .gitignore  .swiftlint.yml  .tool-versions  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  project.yml  pyproject.toml
.github/workflows/: build.yml  ml-build.yml
Extension/: CameraExtensionDevice.swift  CameraExtensionProvider.swift  CameraExtensionStream.swift  ControlClient.swift  GazeLockCameraExtension.entitlements  Info.plist  main.swift
ML/: README.md
ML/gazelock_ml/: __init__.py
ML/gazelock_ml/cli/: eval.py  export.py  journey_card.py  pipeline_card.py  preview_pairs.py  (+2 more)
Sources/GazeLock/: GazeLock.entitlements
Sources/Shared/: AppProfileOverrides.swift  ControlServiceProtocol.swift  ControlState.swift  EntitlementLevel.swift  Sensitivity.swift  SetupProfile.swift  UserCalibration.swift
Tests/GazeLockTests/: AppProfileObserverTests.swift  AppProfileOverridesTests.swift  AutoDetectTests.swift  CalibrationStoreTests.swift  CompositorTests.swift  ControlStateTests.swift  CoreMLRefinerTests.swift  EntitlementCheckerTests.swift  EyeGeometryAimTests.swift  EyeGeometryTests.swift  FramePipelineTests.swift  IrisKalmanTests.swift  LandmarkDetectorTests.swift  LandmarkSmootherTests.swift  LookAwayDetectorTests.swift  MenuBarIconTests.swift  MetalWarpPipelineTests.swift  OneEuroFilterTests.swift  PixelBufferHelpers.swift  PlaceholderTests.swift  PopoverViewSnapshotTests.swift  PushXPCTests.swift  ThinPlateSplineTests.swift  UserCalibrationTests.swift
scripts/: bootstrap.sh
weights/refiner.mlpackage/: Manifest.json
(+129 files in other folders)
